--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
                 The <strong>Zero-Click Exploit CVE-2025-33721</strong> also known as "Ghost Touch", is confirmed to be stealing banking credentials, 2FA codes, and private photos from iPhones and Android devices <strong>without a single click</strong>. Incident response teams have traced <strong>$2.8 million in fraudulent transfers in the past 48 hours</strong> to this single vulnerability. Over <strong>340,000 devices are confirmed compromised</strong>, with infection rates doubling every 12 hours.
             </p>
             <!-- IMAGE PLACEHOLDER 1 -->
-            <img src="eyeglass.avif">
+            <img src="images/eyeglass.avif">
             <p class="image-caption">
                 Figure 1: Exponential growth of Ghost Touch infections and associated financial losses
             </p>
