--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@ For Technical Users: If you have experience with coding, command-line tools, and
 
 For Non-Technical Users: If you prefer a hands-off approach with guaranteed results, an <strong>automated professional service</strong> will handle the entire process for you.
 
-To implement the manual patch, you will need to access your device's bootloader interface—the black screen with white text that appears when you restart your phone while holding volume up + power. This process is standard for developers familiar with <strong>ADB commands</strong> and <strong>fastboot protocols</strong>. However, for those without this technical background, it carries a <strong>significant risk of error</strong> that could lock you out of your device or wipe your data.
+To implement the manual patch, you will need to access your device's bootloader interface. This is  the black screen with white text that appears when you restart your phone while holding volume up + power. This process is standard for developers familiar with <strong>ADB commands</strong> and <strong>fastboot protocols</strong>. However, for those without this technical background, it carries a <strong>significant risk of error</strong> that could lock you out of your device or wipe your data.
 
 
 
@@ -697,7 +697,7 @@ To implement the manual patch, you will need to access your device's bootloader 
                     <i class="fas fa-coffee" style="color: #cd040b; font-size: 32px;"></i>
                 </div>
                 <h3 style="color: white; margin-bottom: 10px; text-align: center;">One-Time License</h3>
-                <p style="color: #aaa; text-align: center;">$8.70 secures a permanent license—less than a coffee for guaranteed protection.</p>
+                <p style="color: #aaa; text-align: center;">$8.70 secures a permanent license. which is less than a coffee for guaranteed protection.</p>
             </div>
         </div>
         
