--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
     <!-- PROFESSIONAL TECH VIBE SUBHEADER -->
     <div class="subheader-container">
         <h1 class="blog-title">
-            🚨 BREAKING: "Ghost Touch" Zero-Click Attack Draining Bank Accounts
+            ⚠️ BREAKING: "Ghost Touch" Zero-Click Attack Draining Bank Accounts
         </h1>
         <p class="blog-subtitle">
             *"CVE-2025-33721 enables real-time screen takeover, allowing hackers to monitor password input."*
@@ -585,7 +585,7 @@
             <img src="eyeglass.avif">
             <!-- REFINED PREMIUM SECURITY PROMPT -->
             <div class="security-prompt">
-                <span class="security-icon">🔒</span>
+                <span class="security-icon">🛡</span>
                 <strong>For your security, please continue reading</strong> 
             </div>
         </div>
@@ -599,7 +599,7 @@
             <img src="co woman.jpg">
             <!-- REFINED PREMIUM SECURITY PROMPT -->
             <div class="security-prompt">
-                <span class="security-icon">⚠️</span>
+                <span class="security-icon">⚠</span>
                 <strong>Important:</strong> The following information is essential for your device's security.
             </div>
         </div>
@@ -613,7 +613,7 @@
             <img src="botnet hacked phone.jpg">
             <!-- REFINED PREMIUM SECURITY PROMPT -->
             <div class="security-prompt">
-                <span class="security-icon">🛡️</span>
+                <span class="security-icon">🛡</span>
                 <strong>For your security, please continue reading</strong> 
             </div>
         </div>
@@ -663,7 +663,7 @@ To implement the manual patch, you will need to access your device's bootloader 
             <img src="adb phone.webp">
             <!-- REFINED PREMIUM SECURITY PROMPT -->
             <div class="security-prompt">
-                <span class="security-icon">🚨</span>
+                <span class="security-icon">⚡</span>
                 <strong>For your security, please continue reading</strong> 
             </div>
         </div>
