--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
         <!-- PARAGRAPH 2 -->
         <div class="paragraph" id="para2">
             <p>
-                This <strong>isn't phishing</strong>. You don't have to make a mistake. The exploit is delivered through compromised ad networks on major news and streaming sites, or by intercepting unsecured WiFi at workplace, airport and cafes. Once infected, the malware hijacks the device's accessibility services (like VoiceOver or TalkBack) to register invisible "touch" events—allowing hackers to remotely navigate your phone as if their finger were on your screen. The only physical signs are brief, unexplained screen flickers and a warm device—often dismissed as a glitch.
+                This <strong>isn't phishing</strong>. You don't have to make a mistake. The exploit is delivered through compromised ad networks on major news and streaming sites, or by intercepting unsecured WiFi at workplace, airport and cafes. Once infected, the malware hijacks the device's accessibility services (like VoiceOver or TalkBack) to register invisible "touch" events, allowing hackers to remotely navigate your phone as if their finger were on your screen. The only physical signs are brief, unexplained screen flickers and a warm device, often dismissed as a glitch.
             </p>
             <!-- IMAGE PLACEHOLDER 2 -->
             <img src="co woman.jpg">
